# mulberry-main

./: .cdtproject  .cproject  .gitattributes  .gitignore  .gitmodules  .project  ChangeLog  INSTALL  Makefile-Linux  Makefile-MacOS  Makefile.in  TODO  configure.in  license-change.py
Libraries/: Makefile.in  openssl
Libraries/MoreFiles/: MoreFilesExtras.c
Libraries/MoreFilesX/: MoreFilesX.c  MoreFilesX.h
Libraries/include/: libraryrules.mak
Linux/: Make.files  Make.header  Makefile.in  cwmul.mcp  links.sh  xmul.jcc
Linux/Help/: CMulberryHelp.cp  CMulberryHelp.h  faq.html  toc.html
Linux/Resources/: AboutText.txt  LicenseText.txt  MUResource.txt  MulberryTips.rc2  MulberryUnix.rc  Mulberrytxt.rc  RegistrationBlankUnix.txt  icons.rc  icons_ico.rc  icons_ico_unix.rc  icons_unix.rc  icos.cp  icos.res  makeall  makeresico  makeresico.cpp  makeresicoinit  makeresicoinit.cpp  makeresstring  makeresstring.cpp  makeresstringinit  makeresstringinit.cpp  makeresxpm  makeresxpm.cpp  makeresxpminit  makeresxpminit.cpp  resource.h  resource_unix.h  string.res  stringinit.cp  xpms.cp  xpms.res
Linux/Sources/: Mulberry_Prefix.h  PP2Win.h  mulpch.h  xmul.cp
MacOS/MulberryXcode.xcodeproj/: project.pbxproj
MacOS/Packaging/: Info.plist
MacOS/Patches/: patchapply.py  patchmaker.py
MacOS/Release Notes/: Full History (v2.0)  Full History (v2.1)  Full History (v3.0)  Full History (v4.0)  Release Notes (v2.0)  Release Notes (v2.1)  Release Notes (v3.0)  Release Notes (v4.0)
MacOS/Resources/: AdBk.icns  Cald.icns  Lett.icns  Mbox.icns  Mulberry.PPob  Mulberry.icns  MulberryAE.r  MulberryBits.r  MulberryVers.r  Pref.icns  RsrcTypes.r  shlb.icns
MacOS/Sources/: MulberryXcode_Prefix.pch  Mulberry_PrefixX.h
Plug-ins/: Makefile  Makefile.in
Plug-ins/ASpell/: ASpell.jcc  Make.files  Make.header  Makefile.in
Plug-ins/CRAM-MD5/: CRAM-MD5.jcc  CRAM-MD5.vcproj  CRAM-MD5.vcxproj  CRAM-MD5.vcxproj.filters  Make.files  Make.header  Makefile.in
Plug-ins/Common/: CAdbkIOPluginDLL.cp  CAdbkIOPluginDLL.h  CAuthPluginDLL.cp  CAuthPluginDLL.h  CConfigPluginDLL.cp  CConfigPluginDLL.h  CPluginDLL.cp  CPluginDLL.h  CPluginInfo.h  CPswdChangePluginDLL.cp  CPswdChangePluginDLL.h  CSecurityPluginDLL.cp  CSecurityPluginDLL.h  CSpellPluginDLL.cp  CSpellPluginDLL.h  HResourceMap.h  Info.plst  InfoCommon.plc  InfoCommon.plst.def  Mac2Linux.h  Mac2Win.h  MulberryPrefixWin32.cp  PluginDLLmain.cp  Plugin_Prefix_Linux.h  Plugin_Prefix_MacOS.h  Plugin_Prefix_MacOSX.h  Plugin_Prefix_MacOSXcode.h  Plugin_Prefix_Win32.h  Plugin_Prefix_mach.h  kbase64.cp  kbase64.h  os_dep.cp  os_dep.h  stdafx.h
Plug-ins/CommunicatorAdbkIO/: Communicator.jcc  CommunicatorAdbkIO.vcproj  CommunicatorAdbkIO.vcxproj  CommunicatorAdbkIO.vcxproj.filters  Make.files  Make.header  Makefile.in
Plug-ins/Configuration/: Configuration.mcp
Plug-ins/DIGEST-MD5/: DIGEST-MD5.jcc  DIGEST-MD5.vcproj  DIGEST-MD5.vcxproj  DIGEST-MD5.vcxproj.filters  Make.files  Make.header  Makefile.in
Plug-ins/Eudora4AdbkIO/: Eudora4.jcc  Eudora4AdbkIO.vcproj  Eudora4AdbkIO.vcxproj  Eudora4AdbkIO.vcxproj.filters  Make.files  Makefile.in
Plug-ins/EudoraAdbkIO/: Eudora.jcc  EudoraAdbkIO.vcproj  EudoraAdbkIO.vcxproj  EudoraAdbkIO.vcxproj.filters  Make.files  Make.header  Makefile.in
Plug-ins/GPG/: GPG.jcc  GPG.vcproj  GPG.vcxproj  GPG.vcxproj.filters  Make.files  Make.header  Makefile.in
Plug-ins/GSSAPI/: GSSAPI.jcc  Make.files  Make.header  Makefile.in
Plug-ins/ISpell/: ISpell.jcc  Make.files  Make.header  Makefile.in
Plug-ins/Kerberos/: Kerberos.jcc  Make.files  Make.header  Makefile.in
Plug-ins/MAPI/: MAPI.mcp  MulberryMAPI.DEF
Plug-ins/NetscapeAdbkIO/: Make.files  Make.header  Makefile.in  Netscape.jcc  NetscapeAdbkIO.vcproj  NetscapeAdbkIO.vcxproj  NetscapeAdbkIO.vcxproj.filters
Plug-ins/OEAdbkIO/: OEAdbkIO.vcproj  OEAdbkIO.vcxproj  OEAdbkIO.vcxproj.filters
Plug-ins/POPPASSD/: Make.files  poppassd.jcc
Plug-ins/PineAdbkIO/: Make.files  Makefile.in  Pine.jcc  PineAdbkIO.vcproj  PineAdbkIO.vcxproj  PineAdbkIO.vcxproj.filters
Plug-ins/PluginLibrary/: Make.files  Make.header  Makefile.in  PluginLib.vcproj  PluginLib.vcxproj  PluginLib.vcxproj.filters  stdafx.h
Plug-ins/QuickmailAdbkIO/: Make.files  Make.header  Makefile.in  Quickmail.jcc  QuickmailAdbkIO.vcproj  QuickmailAdbkIO.vcxproj  QuickmailAdbkIO.vcxproj.filters
Plug-ins/QuickmailProAdbkIO/: Make.files  QuickmailPro.jcc  QuickmailProAdbkIO.vcproj  QuickmailProAdbkIO.vcxproj  QuickmailProAdbkIO.vcxproj.filters
Plug-ins/SMIME/: Make.files  Make.header  Makefile.in  SMIME.jcc  SMIME.vcproj  SMIME.vcxproj  SMIME.vcxproj.filters
Plug-ins/SSL/: Make.files  Make.header  Makefile.in  SSL.DEF  SSL.def  SSL.jcc  SSL.mcp.exp  SSL.vcproj  SSL.vcxproj  SSL.vcxproj.filters
Plug-ins/URLPASSD/: Make.files  Make.header  urlpassd.jcc
Plug-ins/include/: nostl.mak  pluginrules.mak  stl.mak
Plug-ins/vCardAdbkIO/: Make.files  Makefile.in  vCardAdbkIO.vcproj  vCardAdbkIO.vcxproj  vCardAdbkIO.vcxproj.filters
Sources_Common/: Makefile.in  Mulberry.pch++  Mulberry_Prefix.h  framework.h  memdebug.cp  memdebug.h  os_dep.cp  os_dep.h
Sources_Common/Automation/: CActionManager.cp  CActionManager.h  CDataItem.cp  CDataItem.h
Sources_Common/Calendar_Store/: CCalendarStoreFreeBusy.cpp  CCalendarStoreFreeBusy.h  CCalendarStoreManager.cpp  CCalendarStoreManager.h  CCalendarStoreNode.cpp  CCalendarStoreNode.h  CCalendarStoreWebcal.cpp  CCalendarStoreWebcal.h  CCalendarStoreXML.cpp  CCalendarStoreXML.h
Sources_Common/Formatting/: CClickElement.cp  CClickElement.h  CClickList.cp  CClickList.h  CFormatElement.cp  CFormatElement.h  CFormatList.cp  CFormatList.h  CHTMLCharacterEntity.cp  CHTMLCharacterEntity.h  CMyStack.cp  CMyStack.h  CParserEnriched.cp  CParserEnriched.h  CParserEnrichedStack.cp  CParserEnrichedStack.h  CParserHTML.cp  CParserHTML.h  ETag.h  (+6 more)
Win32/: .gitattributes  Mulberry.exe.manifest  Mulberry.sln  Mulberry.vcproj  Mulberry.vcxproj  Mulberry.vcxproj.filters  MulberryVC10.sln  postbuild.bat  postbuild64.bat  stdafx.h
debian/: README.Debian  changelog  control  dirs  rules
(+4902 files in other folders)
